--- a/dreamdefenders.org/composer.json
+++ b/dreamdefenders.org/composer.json
@@ -30,6 +30,26 @@
     {
       "type": "composer",
       "url": "https://wpackagist.org"
+    },
+    {
+      "type": "composer",
+      "url": "https://packages.tinypixel.io/satispress/"
+    },
+    {
+      "type": "package",
+      "package": {
+        "name": "advanced-custom-fields/advanced-custom-fields-pro",
+        "version": "5.7.7",
+        "type": "wordpress-plugin",
+        "dist": {
+          "type": "zip",
+          "url": "https://connect.advancedcustomfields.com/index.php?p=pro&a=download"
+        },
+        "require": {
+          "philippbaschke/acf-pro-installer": "^1.0",
+          "composer/installers": "^1.0"
+        }
+      }
     }
   ],
   "require": {
@@ -39,7 +59,17 @@
     "oscarotero/env": "^1.1.0",
     "roots/wordpress": "5.0.3",
     "roots/wp-config": "1.0.0",
-    "roots/wp-password-bcrypt": "1.0.0"
+    "roots/wp-password-bcrypt": "1.0.0",
+    "primetime/wp-plugin-activation-manifest": "^1.0",
+    "wpackagist-plugin/updraftplus": ">=1",
+    "tiny-packagist/wp-migrate-db-pro": ">=1",
+    "tiny-packagist/wp-migrate-db-pro-cli": ">=1",
+    "tiny-packagist/wp-migrate-db-pro-media-files": ">=1",
+    "tiny-packagist/wp-migrate-db-pro-multisite-tools": ">=1",
+    "advanced-custom-fields/advanced-custom-fields-pro": ">=5",
+    "wpackagist-plugin/cdn-enabler": ">=1",
+    "wpackagist-plugin/stream": "^3.2",
+    "wpackagist-plugin/block-unit-test": ">=1"
   },
   "require-dev": {
     "squizlabs/php_codesniffer": "^3.0.2",
