--- a/trellis/group_vars/development/php.yml
+++ b/trellis/group_vars/development/php.yml
@@ -4,6 +4,8 @@ php_display_startup_errors: 'On'
 php_track_errors: 'On'
 php_mysqlnd_collect_memory_statistics: 'On'
 php_opcache_enable: 0
+php_upload_max_filesize: 1000M
+php_post_max_size: 1000M
 
 xdebug_remote_enable: 1
 xdebug_remote_connect_back: 1
