--- a/dreamdefenders.org/composer.json
+++ b/dreamdefenders.org/composer.json
@@ -67,6 +67,7 @@
     "tiny-packagist/wp-migrate-db-pro-media-files": ">=1",
     "tiny-packagist/wp-migrate-db-pro-multisite-tools": ">=1",
     "advanced-custom-fields/advanced-custom-fields-pro": ">=5",
+    "wpackagist-plugin/salesforce-wordpress-to-lead": ">2.7.3",
     "wpackagist-plugin/cdn-enabler": ">=1",
     "wpackagist-plugin/stream": "^3.2",
     "wpackagist-plugin/block-unit-test": ">=1"
