--- a/dreamdefenders.org/web/app/themes/sage/composer.json
+++ b/dreamdefenders.org/web/app/themes/sage/composer.json
@@ -36,7 +36,9 @@
     "composer/installers": "~1.0",
     "illuminate/support": "5.6.*",
     "roots/sage-lib": "~9.0.7",
-    "soberwp/controller": "~2.1.0"
+    "soberwp/controller": "~2.1.0",
+    "log1x/sage-directives": "^1.0",
+    "log1x/blade-svg-sage": "^2.0"
   },
   "require-dev": {
     "squizlabs/php_codesniffer": "^2.8.0",
