NEW: CPT for campaign work, CPT for freedom papers. Taxonomies for both. Freedom Paper component, template for campaigns and freedom papers.'

--- a/dreamdefenders.org/web/app/themes/sage/composer.json
+++ b/dreamdefenders.org/web/app/themes/sage/composer.json
@@ -40,7 +40,8 @@
     "log1x/sage-directives": "^1.0",
     "log1x/blade-svg-sage": "^2.0",
     "querypath/querypath": "^3.0",
-    "stoutlogic/acf-builder": "^1.8"
+    "stoutlogic/acf-builder": "^1.8",
+    "johnbillion/extended-cpts": "^4.2"
   },
   "require-dev": {
     "squizlabs/php_codesniffer": "^2.8.0",
