--- a/bedrock/web/app/plugins/support/composer.json
+++ b/bedrock/web/app/plugins/support/composer.json
@@ -24,9 +24,7 @@
     "composer/installers": "^1.0",
     "roots/acorn": "dev-master",
     "roots/support": "dev-master",
-    "illuminate/support": "^5.7",
-    "tiny-pixel/acorn-models": "dev-master",
-    "tiny-pixel/acorn-roles": "dev-master"
+    "illuminate/support": "^5.7"
   },
   "require-dev": {
     "phpunit/phpunit": "^7.2",
