staging-server deploy

--- a/trellis/group_vars/all/users.yml
+++ b/trellis/group_vars/all/users.yml
@@ -6,13 +6,15 @@ users:
       - "{{ web_group }}"
     keys:
       - "{{ lookup('file', '~/.ssh/id_rsa.pub') }}"
-      # - https://github.com/username.keys
+      - "{{ lookup('file', '~/.ssh/do_rsa.pub') }}"
+      - https://github.com/kellymears.keys
   - name: "{{ admin_user }}"
     groups:
       - sudo
     keys:
       - "{{ lookup('file', '~/.ssh/id_rsa.pub') }}"
-      # - https://github.com/username.keys
+      - "{{ lookup('file', '~/.ssh/do_rsa.pub') }}"
+      - https://github.com/kellymears.keys
 
 web_user: web
 web_group: www-data
