--- a/bedrock/web/app/themes/sage/composer.json
+++ b/bedrock/web/app/themes/sage/composer.json
@@ -45,12 +45,14 @@
   },
   "require": {
     "php": "^7.1.3",
+    "johnbillion/extended-cpts": "^4.3",
     "log1x/sage-directives": "^1.0",
     "log1x/sage-svg": "^1.0",
     "roots/acorn": "dev-master",
+    "stoutlogic/acf-builder": "^1.8",
+    "tiny-pixel/acorn-db": "dev-master",
     "tiny-pixel/acorn-mail": "0.9.1",
-    "tiny-pixel/support": "dev-master",
-    "tiny-pixel/acorn-db": "dev-master"
+    "tiny-pixel/support": "dev-master"
   },
   "require-dev": {
     "squizlabs/php_codesniffer": "^3.4"
