--- a/react/package.json
+++ b/react/package.json
@@ -24,8 +24,10 @@
     "framer-motion": "^1.6.1",
     "graphql": "^14.4.2",
     "graphql-tag": "^2.10.1",
+    "polished": "^3.4.1",
     "react": "^16.9.0",
     "react-apollo": "^3.0.0",
+    "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^16.9.0",
     "react-flip-page": "^1.5.7",
     "react-image-webp": "^0.3.1",
