--- a/bedrock/composer.json
+++ b/bedrock/composer.json
@@ -47,7 +47,7 @@
     "roots/wp-password-bcrypt": "1.0.0",
     "roots/soil": ">=3",
     "wp-graphql/wp-graphql": "^0.3.0",
-    "wp-graphql/wp-graphiql": "*",
+    "wp-graphql/wp-graphiql": ">=1.0.0",
     "wp-graphql/wp-graphql-acf": "~0.2.0",
     "tiny-packagist/advanced-custom-fields-pro": "5.7.7",
     "wpackagist-plugin/gutenberg": "^6",
@@ -56,7 +56,8 @@
     "wpackagist-plugin/autodescription": ">=3.0.6",
     "wpackagist-plugin/cdn-enabler": ">=1",
     "aaemnnosttv/wp-cli-login-server": "^1.2",
-    "wpackagist-plugin/simple-custom-post-order": "^2.4"
+    "wpackagist-plugin/simple-custom-post-order": "^2.4",
+    "wpackagist-plugin/post-2-post-for-acf": "^1.4"
   },
   "require-dev": {
     "squizlabs/php_codesniffer": "^3.4.2",
