--- a/react/package.json
+++ b/react/package.json
@@ -61,6 +61,10 @@
     ]
   },
   "devDependencies": {
-    "babel-plugin-styled-components": "^1.10.6"
+    "babel-plugin-styled-components": "^1.10.6",
+    "react-snapshot": "^1.3.0"
+  },
+  "reactSnapshot": {
+    "snapshotDelay": 300
   }
 }
