freedom papers archival template

--- a/react/package.json
+++ b/react/package.json
@@ -31,6 +31,7 @@
     "react-dom": "^16.9.0",
     "react-flip-page": "^1.5.7",
     "react-image-webp": "^0.3.1",
+    "react-parallax": "^2.2.0",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.0",
     "react-use-dimensions": "^1.2.1",
