:rocket: deploy scripts

--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "build:theme": "yarn workspace theme build",
     "build:blocks": "yarn workspace blocks build",
     "build": "concurrently --kill-others-on-fail \"yarn build:theme\"  \"yarn build:blocks\"",
+    "production:theme": "yarn workspace theme build",
+    "production:blocks": "yarn workspace blocks build",
+    "production": "concurrently --kill-others-on-fail \"yarn production:theme\"  \"yarn production:blocks\"",
     "start:theme": "yarn workspace theme start",
     "start:blocks": "yarn workspace blocks build",
     "start": "concurrently --kill-others-on-fail \"yarn start:theme\" \"yarn start:blocks\"",
