--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
   "devDependencies": {
     "@percy/cypress": "^2.2.0",
     "concurrently": "^5.0.2",
-    "cypress-slack-reporter": "^0.5.0",
-    "postcss-import-ext-glob": "^1.1.0"
+    "cypress-slack-reporter": "^0.5.0"
   }
 }
