--- a/web/app/themes/dreamdefenders-theme/.editorconfig
+++ b/web/app/themes/dreamdefenders-theme/.editorconfig
@@ -8,6 +8,9 @@ indent_style = space
 indent_size = 2
 trim_trailing_whitespace = true
 
+[webpack.mix.js]
+indent_size = 3
+
 [*.md]
 trim_trailing_whitespace = false
 
