update plugin manifest

--- a/web/app/mu-plugins/plugin-manifest/manifest.yml
+++ b/web/app/mu-plugins/plugin-manifest/manifest.yml
@@ -25,6 +25,7 @@ staging:
   enable:
     - rewrite-testing/rewrite-testing.php
     - user-switching/user-switching.php
+  disable:
     - wp-rocket/wp-rocket.php
 
 production:
