--- a/web/app/themes/sage/composer.json
+++ b/web/app/themes/sage/composer.json
@@ -2,6 +2,12 @@
   "name": "dreamdefenders/theme",
   "type": "wordpress-theme",
   "license": "MIT",
+  "repositories": [
+    {
+      "type": "git",
+      "url": "git@github.com:kellymears/sage-svg"
+    }
+  ],
   "autoload": {
     "psr-4": {
       "App\\": "app/"
@@ -10,7 +16,7 @@
   "require": {
     "php": "^7.2",
     "log1x/sage-directives": "^1.1",
-    "log1x/sage-svg": "^1.0",
+    "kellymears/sage-svg": "dev-master",
     "tiny-pixel/acorn-instagram": "dev-master",
     "roots/acorn": "dev-master"
   },
