--- a/web/app/themes/sage/package.json
+++ b/web/app/themes/sage/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "build": "cross-env NODE_ENV=development run-s mix",
     "build:production": "cross-env NODE_ENV=production run-s clean mix",
-    "start": "cross-env NODE_ENV=development run-s \"mix -- --watch\"",
+    "start": "webpack-dashboard -- cross-env NODE_ENV=development run-s \"mix -- --watch\"",
     "hot": "cross-env NODE_ENV=development run-s build mix:hot",
     "mix": "webpack --progress --hide-modules --config=../../../../node_modules/laravel-mix/setup/webpack.config.js",
     "mix:hot": "webpack-dev-server --inline --hot --config=../../../../node_modules/laravel-mix/setup/webpack.config.js",
@@ -31,6 +31,7 @@
     "babel-eslint": "^10.0.3",
     "browser-sync": "^2.26.7",
     "browser-sync-webpack-plugin": "^2.0.1",
+    "console.mute": "^0.3.0",
     "cross-env": "^6.0.3",
     "eslint": "^6.8.0",
     "eslint-plugin-import": "^2.20.0",
@@ -39,6 +40,7 @@
     "laravel-mix-purgecss": "^4.2.0",
     "laravel-mix-wp-blocks": "^0.2.0",
     "npm-run-all": "^4.1",
+    "pa11y": "^5.3.0",
     "rimraf": "^3.0",
     "sass": "^1.24.4",
     "sass-loader": "^8.0.2",
@@ -48,11 +50,13 @@
     "tailwindcss-gradients": "^2.3.1",
     "tailwindcss-scrims": "^1.0.0",
     "tailwindcss-transitions": "^2.1.0",
-    "vue-template-compiler": "^2.6.10"
+    "vue-template-compiler": "^2.6.10",
+    "webpack-dashboard": "^3.2.0"
   },
   "dependencies": {
     "@wordpress/dom-ready": "^2.5.1",
     "animejs": "^3.1.0",
+    "headroom.js": "^0.10.4",
     "lodash": "^4.17.15"
   }
 }
