--- a/web/app/themes/sage/composer.json
+++ b/web/app/themes/sage/composer.json
@@ -15,7 +15,6 @@
   },
   "require": {
     "php": "^7.2",
-    "franzl/studio": "^0.13.0",
     "kellymears/sage-svg": "dev-master",
     "log1x/sage-directives": "^1.1",
     "roots/acorn": "dev-master",
@@ -23,7 +22,8 @@
   },
   "require-dev": {
     "filp/whoops": "^2.5",
-    "squizlabs/php_codesniffer": "^3.5"
+    "squizlabs/php_codesniffer": "^3.5",
+    "franzl/studio": "^0.13.0"
   },
   "config": {
     "optimize-autoloader": true,
