--- a/web/app/plugins/blocks/package.json
+++ b/web/app/plugins/blocks/package.json
@@ -1,11 +1,12 @@
 {
   "name": "blocks",
   "version": "1.0.0",
+  "license": "MIT",
   "scripts": {
     "dev": "NODE_ENV=development webpack --progress --hide-modules",
     "start": "NODE_ENV=development webpack --watch --progress --hide-modules --config=../../../../node_modules/laravel-mix/setup/webpack.config.js",
     "watch": "NODE_ENV=development webpack-dev-server --inline --hot --config=../../../../node_modules/laravel-mix/setup/webpack.config.js",
-    "build": "NODE_ENV=production  webpack --progress --hide-modules --config=../../../../node_modules/laravel-mix/setup/webpack.config.js"
+    "build": "NODE_ENV=production webpack --hide-modules --no-progress --config=../../../../node_modules/laravel-mix/setup/webpack.config.js"
   },
   "devDependencies": {
     "@babel/plugin-syntax-object-rest-spread": "^7.2.0",
