--- a/package.json
+++ b/package.json
@@ -1,24 +1,25 @@
 {
   "name": "dreamdefenders",
   "license": "MIT",
-  "private": true,
   "workspaces": [
+    "config",
     "web/app/plugins/blocks",
     "web/app/themes/sage"
   ],
+  "private": true,
   "scripts": {
     "cypress:open": "cypress open",
     "cypress:development": "cypress run --spec 'tests/cypress/integration/development.js' --browser chrome",
     "cypress:staging": "cypress run --spec 'tests/cypress/integration/staging.js' --browser chrome",
     "cypress:production": "cypress run --spec 'tests/cypress/integration/production.js' --browser chrome",
-    "start": "concurrently --kill-others-on-fail \"yarn start:theme\" \"yarn start:blocks\"",
+    "start": "concurrently --kill-others-on-fail -c bold.bgMagenta.white,bold.bgBlue.white -n blocks,sage \"yarn start:blocks\" \"yarn start:theme\"",
     "start:theme": "yarn workspace theme start",
     "start:blocks": "yarn workspace blocks build",
-    "build": "concurrently --kill-others-on-fail \"yarn build:theme\"  \"yarn build:blocks\"",
+    "build": "concurrently --kill-others-on-fail -c bold.bgMagenta.white,bold.bgBlue.white -n blocks,sage \"yarn build:blocks\" \"yarn build:theme\"",
     "build:theme": "yarn workspace theme build",
     "build:blocks": "yarn workspace blocks build",
-    "production": "concurrently --kill-others-on-fail \"yarn production:theme\"  \"yarn production:blocks\"",
-    "production:theme": "yarn workspace theme build",
+    "production": "concurrently --kill-others-on-fail -c bold.bgMagenta.white,bold.bgBlue.white -n sage,blocks \"yarn production:theme\" \"yarn production:blocks\"",
+    "production:theme": "yarn workspace theme build:production",
     "production:blocks": "yarn workspace blocks build"
   },
   "devDependencies": {
