--- a/config/package.json
+++ b/config/package.json
@@ -4,6 +4,7 @@
   "main": "tailwind.js",
   "license": "MIT",
   "devDependencies": {
-    "tailwindcss": "^1.1.4"
+    "tailwindcss": "^1.1.4",
+    "tailwindcss-blend-mode": "^1.0.0"
   }
 }
