--- a/config/package.json
+++ b/config/package.json
@@ -5,6 +5,8 @@
   "license": "MIT",
   "devDependencies": {
     "tailwindcss": "^1.1.4",
-    "tailwindcss-blend-mode": "^1.0.0"
+    "tailwindcss-blend-mode": "^1.0.0",
+    "tailwindcss-multi-column": "^1.0.2",
+    "tailwindcss-transitions": "^2.1.0"
   }
 }
