--- a/web/app/themes/sage/package.json
+++ b/web/app/themes/sage/package.json
@@ -27,6 +27,7 @@
   },
   "devDependencies": {
     "@babel/plugin-syntax-dynamic-import": "^7.8",
+    "@tinypixelco/laravel-mix-wp-blocks": "^1.0.0",
     "@wordpress/babel-preset-default": "^4.8.0",
     "@wordpress/browserslist-config": "^2.6.0",
     "@wordpress/dependency-extraction-webpack-plugin": "^2.1.0",
@@ -40,7 +41,6 @@
     "laravel-mix": "^5.0.1",
     "laravel-mix-copy-watched": "^2.2.2",
     "laravel-mix-purgecss": "^4.2.0",
-    "laravel-mix-wp-blocks": "^0.2.0",
     "npm-run-all": "^4.1",
     "pa11y": "^5.3.0",
     "rimraf": "^3.0",
@@ -57,6 +57,7 @@
     "webpack-dashboard": "^3.2.0"
   },
   "dependencies": {
+    "@tinypixelco/hoverfx": "^0.0.2",
     "@wordpress/dom-ready": "^2.5.1",
     "animejs": "^3.1.0",
     "headroom.js": "^0.10.4",
