--- a/web/app/themes/sage/package.json
+++ b/web/app/themes/sage/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "build": "cross-env NODE_ENV=development run-s mix",
     "build:production": "cross-env NODE_ENV=production run-s clean mix:production",
-    "start": "webpack-dashboard -- cross-env NODE_ENV=development run-s \"mix -- --watch\"",
+    "start": "cross-env NODE_ENV=development run-s \"mix -- --watch\"",
     "hot": "cross-env NODE_ENV=development run-s build mix:hot",
     "mix": "webpack --no-progress --hide-modules --config=../../../../node_modules/laravel-mix/setup/webpack.config.js",
     "mix:production": "NODE_ENV=production webpack --no-progress --hide-modules --config=../../../../node_modules/laravel-mix/setup/webpack.config.js",
@@ -53,8 +53,7 @@
     "tailwindcss-gradients": "^2.3.1",
     "tailwindcss-scrims": "^1.0.0",
     "tailwindcss-transitions": "^2.1.0",
-    "vue-template-compiler": "^2.6.10",
-    "webpack-dashboard": "^3.2.0"
+    "vue-template-compiler": "^2.6.10"
   },
   "dependencies": {
     "@tinypixelco/hoverfx": "^0.0.2",
