--- a/web/app/plugins/blocks/package.json
+++ b/web/app/plugins/blocks/package.json
@@ -35,5 +35,8 @@
     "tailwind.macro": "^0.5.10",
     "tailwindcss": "^1.1.3",
     "vue-template-compiler": "^2.6.10"
+  },
+  "dependencies": {
+    "chroma-js": "^2.1.0"
   }
 }
