--- a/web/app/themes/sage/composer.json
+++ b/web/app/themes/sage/composer.json
@@ -23,8 +23,8 @@
   },
   "require-dev": {
     "filp/whoops": "^2.5",
-    "squizlabs/php_codesniffer": "^3.5",
-    "franzl/studio": "^0.13.0"
+    "franzl/studio": "^0.13.0",
+    "squizlabs/php_codesniffer": "^3.5"
   },
   "config": {
     "optimize-autoloader": true,
