--- a/composer.json
+++ b/composer.json
@@ -84,7 +84,8 @@
     "roave/security-advisories": "dev-master",
     "squizlabs/php_codesniffer": "^3.5",
     "wpackagist-plugin/rewrite-testing": ">=0.1",
-    "wpackagist-plugin/user-switching": ">=1.5.0"
+    "wpackagist-plugin/user-switching": ">=1.5.0",
+    "wpackagist-plugin/wp-crontrol": "^1.7"
   },
   "autoload": {
     "psr-4": {
