add pdf-viewer block and post ordering plugin

--- a/composer.json
+++ b/composer.json
@@ -69,10 +69,12 @@
     "wpackagist-plugin/disable-comments": "^1.10",
     "wpackagist-plugin/duplicate-post": ">=3.2.2",
     "wpackagist-plugin/gutenberg": "^7.0",
+    "wpackagist-plugin/pdf-viewer-block": "^0.1.0",
     "wpackagist-plugin/query-monitor": "^3.3",
     "wpackagist-plugin/redirection": ">=3.3.1",
     "wpackagist-plugin/rewrite-testing": ">=0.1",
     "wpackagist-plugin/simple-local-avatars": ">=2.0.0",
+    "wpackagist-plugin/simple-page-ordering": "^2.3",
     "wpackagist-plugin/stream": "^3.2",
     "wpackagist-plugin/user-switching": ">=1.5.0",
     "wpackagist-plugin/wp-redis": "^0.8.0",
