--- a/package.json
+++ b/package.json
@@ -2,12 +2,14 @@
   "name": "dreamdefenders",
   "license": "MIT",
   "workspaces": [
-    "config",
+    "build/tailwind",
+    "build/mix",
     "web/app/plugins/blocks",
     "web/app/themes/sage"
   ],
   "private": true,
   "scripts": {
+    "all": "cross-env NODE_ENV=production webpack --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
     "cypress:open": "cypress open",
     "cypress:development": "cypress run --spec 'tests/cypress/integration/development.js' --browser chrome",
     "cypress:staging": "cypress run --spec 'tests/cypress/integration/staging.js' --browser chrome",
