--- a/web/app/mix-manifest.json
+++ b/web/app/mix-manifest.json
@@ -9,13 +9,12 @@
     "/plugins/blocks/dist/scripts/squadd/block.js": "/plugins/blocks/dist/scripts/squadd/block.js?id=cec6290c857805508bd9",
     "/plugins/blocks/dist/scripts/two-column/block.js": "/plugins/blocks/dist/scripts/two-column/block.js?id=6464c1306aa16ef9e725",
     "/themes/sage/dist/scripts/app.js": "/themes/sage/dist/scripts/app.js?id=86181b14cb00a54e9928",
-    "/themes/sage/dist/styles/app.css": "/themes/sage/dist/styles/app.css?id=5499ed70dcf7c7060039",
-    "/themes/sage/dist/styles.editor.css": "/themes/sage/dist/styles.editor.css?id=c018d4bb8c2ac5e3f902",
+    "/themes/sage/dist/styles/app.css": "/themes/sage/dist/styles/app.css?id=4b1d9cca2c9548971641",
+    "/themes/sage/dist/styles.editor.css": "/themes/sage/dist/styles.editor.css?id=789389567876bbfafdff",
     "/plugins/blocks/dist/styles/public.css": "/plugins/blocks/dist/styles/public.css?id=cf9a02c17c43daa481d1",
     "/plugins/blocks/dist/styles/editor.css": "/plugins/blocks/dist/styles/editor.css?id=cf9a02c17c43daa481d1",
     "/themes/sage/dist/scripts/customizer.js": "/themes/sage/dist/scripts/customizer.js?id=3b4fb39cb0602c0bb927",
     "/themes/sage/dist/scripts/editor.js": "/themes/sage/dist/scripts/editor.js?id=643b63839fcfa8c1f2b2",
-    "/themes/sage/dist/styles/compiled.css": "/themes/sage/dist/styles/compiled.css?id=23132f4eea8b0443310f",
     "/themes/sage/dist/images/27531664270_cd0a3191ac_o.svg": "/themes/sage/dist/images/27531664270_cd0a3191ac_o.svg?id=7ff86b040f6d9768b6e0",
     "/themes/sage/dist/images/305-miami.png": "/themes/sage/dist/images/305-miami.png?id=98e448dad37d735cf90c",
     "/themes/sage/dist/images/305-miami@2x.png": "/themes/sage/dist/images/305-miami@2x.png?id=e8edd9b1778500b2ad74",
@@ -43,46 +42,6 @@
     "/themes/sage/dist/images/Image 2.svg": "/themes/sage/dist/images/Image 2.svg?id=4c0159f12f8be4e8cbfa",
     "/themes/sage/dist/images/Image 3.svg": "/themes/sage/dist/images/Image 3.svg?id=a06b736af4ea548854f3",
     "/themes/sage/dist/images/Image 4.svg": "/themes/sage/dist/images/Image 4.svg?id=c8cf98756c6929d530ad",
-    "/themes/sage/dist/images/Screen Shot -1.svg": "/themes/sage/dist/images/Screen Shot -1.svg?id=9925ccd66a711f2c3ca6",
-    "/themes/sage/dist/images/Screen Shot -10.svg": "/themes/sage/dist/images/Screen Shot -10.svg?id=b6eba1311ea2f3c032ee",
-    "/themes/sage/dist/images/Screen Shot -11.svg": "/themes/sage/dist/images/Screen Shot -11.svg?id=fabe4ccdcbee4ea0bb93",
-    "/themes/sage/dist/images/Screen Shot -12.svg": "/themes/sage/dist/images/Screen Shot -12.svg?id=13878fcc7aacb248e382",
-    "/themes/sage/dist/images/Screen Shot -13.svg": "/themes/sage/dist/images/Screen Shot -13.svg?id=9925ccd66a711f2c3ca6",
-    "/themes/sage/dist/images/Screen Shot -14.svg": "/themes/sage/dist/images/Screen Shot -14.svg?id=2a9e72a2cf14ece42fb9",
-    "/themes/sage/dist/images/Screen Shot -15.svg": "/themes/sage/dist/images/Screen Shot -15.svg?id=4bb19c5e6b216f183d0c",
-    "/themes/sage/dist/images/Screen Shot -16.svg": "/themes/sage/dist/images/Screen Shot -16.svg?id=f86f7a69638ae7df5268",
-    "/themes/sage/dist/images/Screen Shot -17.svg": "/themes/sage/dist/images/Screen Shot -17.svg?id=b6eba1311ea2f3c032ee",
-    "/themes/sage/dist/images/Screen Shot -18.svg": "/themes/sage/dist/images/Screen Shot -18.svg?id=33382ca8adab13df280a",
-    "/themes/sage/dist/images/Screen Shot -19.svg": "/themes/sage/dist/images/Screen Shot -19.svg?id=1ba178aa462456a4f101",
-    "/themes/sage/dist/images/Screen Shot -2.svg": "/themes/sage/dist/images/Screen Shot -2.svg?id=2a9e72a2cf14ece42fb9",
-    "/themes/sage/dist/images/Screen Shot -20.svg": "/themes/sage/dist/images/Screen Shot -20.svg?id=6d639f931fd60ebd1907",
-    "/themes/sage/dist/images/Screen Shot -21.svg": "/themes/sage/dist/images/Screen Shot -21.svg?id=9925ccd66a711f2c3ca6",
-    "/themes/sage/dist/images/Screen Shot -22.svg": "/themes/sage/dist/images/Screen Shot -22.svg?id=2a9e72a2cf14ece42fb9",
-    "/themes/sage/dist/images/Screen Shot -23.svg": "/themes/sage/dist/images/Screen Shot -23.svg?id=4bb19c5e6b216f183d0c",
-    "/themes/sage/dist/images/Screen Shot -24.svg": "/themes/sage/dist/images/Screen Shot -24.svg?id=f86f7a69638ae7df5268",
-    "/themes/sage/dist/images/Screen Shot -25.svg": "/themes/sage/dist/images/Screen Shot -25.svg?id=b6eba1311ea2f3c032ee",
-    "/themes/sage/dist/images/Screen Shot -26.svg": "/themes/sage/dist/images/Screen Shot -26.svg?id=33382ca8adab13df280a",
-    "/themes/sage/dist/images/Screen Shot -27.svg": "/themes/sage/dist/images/Screen Shot -27.svg?id=1ba178aa462456a4f101",
-    "/themes/sage/dist/images/Screen Shot -28.svg": "/themes/sage/dist/images/Screen Shot -28.svg?id=6d639f931fd60ebd1907",
-    "/themes/sage/dist/images/Screen Shot -3.svg": "/themes/sage/dist/images/Screen Shot -3.svg?id=4bb19c5e6b216f183d0c",
-    "/themes/sage/dist/images/Screen Shot -4.svg": "/themes/sage/dist/images/Screen Shot -4.svg?id=f86f7a69638ae7df5268",
-    "/themes/sage/dist/images/Screen Shot -5.svg": "/themes/sage/dist/images/Screen Shot -5.svg?id=066d096c4cd770d7f80b",
-    "/themes/sage/dist/images/Screen Shot -6.svg": "/themes/sage/dist/images/Screen Shot -6.svg?id=65ddfb2ac6e063f44e97",
-    "/themes/sage/dist/images/Screen Shot -7.svg": "/themes/sage/dist/images/Screen Shot -7.svg?id=16ed5fc755ad93ddbef0",
-    "/themes/sage/dist/images/Screen Shot -8.svg": "/themes/sage/dist/images/Screen Shot -8.svg?id=e0f0736619f7b110dc66",
-    "/themes/sage/dist/images/Screen Shot -9.svg": "/themes/sage/dist/images/Screen Shot -9.svg?id=b30b1012a2368cbe8a0f",
-    "/themes/sage/dist/images/Screen Shot 2019-11-25 at 7.18.10 PM.svg": "/themes/sage/dist/images/Screen Shot 2019-11-25 at 7.18.10 PM.svg?id=9925ccd66a711f2c3ca6",
-    "/themes/sage/dist/images/Screen Shot 2019-11-25 at 7.45.15 PM.svg": "/themes/sage/dist/images/Screen Shot 2019-11-25 at 7.45.15 PM.svg?id=2a9e72a2cf14ece42fb9",
-    "/themes/sage/dist/images/Screen Shot 2019-11-25 at 7.45.34 PM.svg": "/themes/sage/dist/images/Screen Shot 2019-11-25 at 7.45.34 PM.svg?id=4bb19c5e6b216f183d0c",
-    "/themes/sage/dist/images/Screen Shot 2019-11-26 at 4.33.09 AM.svg": "/themes/sage/dist/images/Screen Shot 2019-11-26 at 4.33.09 AM.svg?id=f86f7a69638ae7df5268",
-    "/themes/sage/dist/images/Screen Shot 2019-11-26 at 4.33.39 AM.svg": "/themes/sage/dist/images/Screen Shot 2019-11-26 at 4.33.39 AM.svg?id=33382ca8adab13df280a",
-    "/themes/sage/dist/images/Screen Shot 2019-11-26 at 4.33.49 AM.svg": "/themes/sage/dist/images/Screen Shot 2019-11-26 at 4.33.49 AM.svg?id=6d639f931fd60ebd1907",
-    "/themes/sage/dist/images/Screen Shot 2019-11-26 at 4.34.01 AM.svg": "/themes/sage/dist/images/Screen Shot 2019-11-26 at 4.34.01 AM.svg?id=1ba178aa462456a4f101",
-    "/themes/sage/dist/images/Screen Shot 2019-11-26 at 4.34.11 AM.svg": "/themes/sage/dist/images/Screen Shot 2019-11-26 at 4.34.11 AM.svg?id=f3860960f5af411b5be1",
-    "/themes/sage/dist/images/Screen Shot 2019-11-26 at 4.34.35 AM.svg": "/themes/sage/dist/images/Screen Shot 2019-11-26 at 4.34.35 AM.svg?id=b6eba1311ea2f3c032ee",
-    "/themes/sage/dist/images/Screen Shot 2019-11-26 at 4.34.54 AM.svg": "/themes/sage/dist/images/Screen Shot 2019-11-26 at 4.34.54 AM.svg?id=fabe4ccdcbee4ea0bb93",
-    "/themes/sage/dist/images/Screen Shot 2019-11-26 at 4.35.31 AM.svg": "/themes/sage/dist/images/Screen Shot 2019-11-26 at 4.35.31 AM.svg?id=13878fcc7aacb248e382",
-    "/themes/sage/dist/images/Screen Shot 2019-11-26 at 4.37.28 AM.svg": "/themes/sage/dist/images/Screen Shot 2019-11-26 at 4.37.28 AM.svg?id=15dbc6c7b6684433c1a2",
     "/themes/sage/dist/images/background-dark-noisey.png": "/themes/sage/dist/images/background-dark-noisey.png?id=38eae8d8d5ad488a3f1b",
     "/themes/sage/dist/images/background-flowing.jpg": "/themes/sage/dist/images/background-flowing.jpg?id=7c03bf2d2e513b89633c",
     "/themes/sage/dist/images/banner-background.png": "/themes/sage/dist/images/banner-background.png?id=7c16439755a471671c16",
@@ -1556,5 +1515,6 @@
     "/themes/sage/dist/svg/logo.svg": "/themes/sage/dist/svg/logo.svg?id=7ae420b40cb4de3feb3c",
     "/themes/sage/dist/svg/menu.svg": "/themes/sage/dist/svg/menu.svg?id=d2646a5378680f4ec769",
     "/themes/sage/dist/svg/organize.svg": "/themes/sage/dist/svg/organize.svg?id=cc2a95524ec4db8bb5b9",
-    "/themes/sage/dist/svg/waves-triple.svg": "/themes/sage/dist/svg/waves-triple.svg?id=52663d659c3d7e679f47"
+    "/themes/sage/dist/svg/waves-triple.svg": "/themes/sage/dist/svg/waves-triple.svg?id=52663d659c3d7e679f47",
+    "/themes/sage/dist/styles/compiled.css": "/themes/sage/dist/styles/compiled.css?id=8e66b4bacc558c0bbb5b"
 }
